corrections to spacing, nav bar margins, small corrections etc.

--- a/public/css/coaches.css
+++ b/public/css/coaches.css
@@ -26,11 +26,33 @@ h1{
 
 .coach-bio{
     font-size: 1.2rem;
-
+    line-height: 2rem;  
 } 
 
 .coach-image {
+    display: flex;
     float: left;
     margin-right: 1%;
 } 
 
+
+/*Media query for phones */ 
+@media only screen and (max-width: 767px) {
+    .coaches-container{
+        align-items: center;
+
+    } 
+
+    .coach-image{
+        float: none;
+        justify-content: center;
+    } 
+
+    .coach-name{
+        display: flex; 
+        justify-content: center;
+
+    } 
+    
+    
+}
