--- a/public/css/nav-bar.css
+++ b/public/css/nav-bar.css
@@ -1,3 +1,9 @@
+body{
+    margin: 0px;
+
+} 
+
+
 /*Flex box */
 .nav-container{
     display: flex;
@@ -6,7 +12,6 @@
     flex-wrap: nowrap;
     background-color: black;
     height: 8.9vh;
-    
 
 }
 
@@ -27,4 +32,13 @@
     padding-top: 20px;
     padding-left: 10px;
     padding-bottom: 10px;
+}
+
+
+/*Media query for phones */ 
+@media only screen and (max-width: 767px) {
+    .nav-container{
+        
+    } 
+    
 }
